- Explicit `--adapter extension` routing is now strict and fails closed when `manifest.json` is missing or invalid (`EXTENSION_MANIFEST_MISSING` / `EXTENSION_MANIFEST_INVALID`) instead of producing partial extension summaries.
- Explicit `--adapter image` routing is now strict and fails closed when extension/header evidence mismatches (`IMAGE_FORMAT_MISMATCH`) instead of returning partial-success image summaries.
- Explicit `--adapter package` routing is now strict for `.exe` and ZIP-backed package containers (`.msix/.nupkg/.whl/.jar`), failing closed on extension/container mismatch (`PACKAGE_FORMAT_MISMATCH`) instead of returning partial package summaries.
- Explicit `--adapter package` routing strictness now also covers `.deb` and `.rpm`, failing closed on invalid container/header evidence (`PACKAGE_FORMAT_MISMATCH`) instead of returning partial package summaries.
- Explicit `--adapter package` routing strictness now also covers `.msi`, failing closed on invalid CFB header evidence (`PACKAGE_FORMAT_MISMATCH`) instead of returning partial package summaries.
- Explicit `--adapter package` routing strictness now also covers `.appimage`, `.pkg`, and `.dmg`, failing closed on invalid header/trailer evidence (`PACKAGE_FORMAT_MISMATCH`) instead of returning partial package summaries.
- Explicit `--adapter package` now fails closed on compressed tar package formats (`.tgz/.tar.gz/.txz/.tar.xz`) when tar plugin preconditions are not met (`PACKAGE_PLUGIN_REQUIRED` / `PACKAGE_PLUGIN_UNAVAILABLE`) instead of silently degrading to partial metadata.
- Explicit `--adapter container` routing now fails closed on invalid SBOM JSON (`CONTAINER_SBOM_INVALID`) for SBOM-named inputs instead of returning partial container summaries.
- Explicit `--adapter container` routing now also fails closed on invalid OCI `index.json` (`CONTAINER_INDEX_INVALID`) for OCI-layout inputs instead of returning partial container summaries.