@@ -41,11 +41,12 @@ Adapter classes
 - Formats: .crx, .vsix, .xpi, unpacked extension folder with manifest.json
 - Key reason codes:
   EXTENSION_ADAPTER_V1
+  EXTENSION_FORMAT_MISMATCH
   EXTENSION_MANIFEST_MISSING
   EXTENSION_MANIFEST_INVALID
   EXTENSION_EXTERNAL_REF_PRESENT
 - Route strictness:
-  explicit `--adapter extension` fails closed when manifest.json is missing or invalid.
+  explicit `--adapter extension` fails closed on invalid package structure (`EXTENSION_FORMAT_MISMATCH`) and when manifest.json is missing or invalid.
 
 4) iac / cicd (baseline signal lane)
 - Formats: Terraform, YAML/JSON config, workflow/pipeline definitions
