@@ -82,6 +82,7 @@ Included
 - Explicit `--adapter cicd` routing is now strict and fails closed on non-CI/CD inputs (`CICD_UNSUPPORTED_FORMAT`) instead of silently classifying generic IaC text as CI/CD.
 - Explicit `--adapter iac` routing is now strict and fails closed on non-IaC text/config inputs (`IAC_UNSUPPORTED_FORMAT`) instead of accepting generic extension-matched text as IaC evidence.
 - Explicit `--adapter extension` routing is now strict and fails closed when `manifest.json` is missing or invalid (`EXTENSION_MANIFEST_MISSING` / `EXTENSION_MANIFEST_INVALID`) instead of producing partial extension summaries.
+- Explicit `--adapter extension` routing now also fails closed on invalid extension package structure (`EXTENSION_FORMAT_MISMATCH`) instead of collapsing malformed bundle bytes into generic manifest-missing paths.
 - Explicit `--adapter image` routing is now strict and fails closed when extension/header evidence mismatches (`IMAGE_FORMAT_MISMATCH`) instead of returning partial-success image summaries.
 - Explicit `--adapter package` routing is now strict for `.exe` and ZIP-backed package containers (`.msix/.nupkg/.whl/.jar`), failing closed on extension/container mismatch (`PACKAGE_FORMAT_MISMATCH`) instead of returning partial package summaries.
 - Explicit `--adapter package` routing strictness now also covers `.deb` and `.rpm`, failing closed on invalid container/header evidence (`PACKAGE_FORMAT_MISMATCH`) instead of returning partial package summaries.
